# 1-Bit-Wonder

./: .gitignore  README.md  chat.py  export_to_hf.py  llama-3.1-community-license  pyproject.toml  run_train.sh
src/llama3_qat/: inference_kernel.py  train.py
src/llama3_qat/experiment/: __init__.py  config.py  lloyd_max.py  quantized_linear.py  quantizer.py  trainer.py
train_configs/: 12B_4bit_config.toml  31B_1bit_config.toml  4B_bf16_config.toml  debug_model.toml
